--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "express": "^5.1.0",
     "graphql-request": "^6.0.0",
-    "openai": "^4.0.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "openai": "^4.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "@types/node": "^20.0.0",
+    "@vercel/node": "^5.1.16",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
   }
