Update Github Actions workflow env keys

--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -22,6 +22,11 @@ jobs:
 
       - name: Run image generation script
         run: npm start
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          SHOPIFY_DOMAIN: ${{ secrets.SHOPIFY_DOMAIN }}
+          SHOPIFY_STOREFRONT_TOKEN: ${{ secrets.SHOPIFY_STOREFRONT_TOKEN }}
+          VERCEL_DEPLOY_HOOK_URL: ${{ secrets.VERCEL_DEPLOY_HOOK_URL }}
 
       - name: Commit and push changes
         run: |
