--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   generate-image:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
